--- a/src/app/pages/movie-banner/movie-banner.component.html
+++ b/src/app/pages/movie-banner/movie-banner.component.html
@@ -1,4 +1,4 @@
-<div class="p-4 bg-black text-white ">
+<div class="pt-4 bg-black text-white ">
   <p-carousel [value]="banners" [numVisible]="1" [numScroll]="1" [circular]="true" [autoplayInterval]="3000" [responsiveOptions]="responsiveOptions">
     <ng-template let-movie pTemplate="item">
       <div class="p-2 text-white bg-black shadow  transition" *ngIf="movie">
