--- a/src/app/pages/movie-list-animation-home/movie-list-animation-home.component.html
+++ b/src/app/pages/movie-list-animation-home/movie-list-animation-home.component.html
@@ -1,33 +1,45 @@
-<div class="p-4 bg-black text-white ">
-    <!-- Tiêu đề -->
-    <h2 class="text-2xl font-bold mb-4">
-        <img src="assets/icon/anime_icon.gif" alt="Anime Icon" class="inline-block w-10 h-10  mr-2">
-         Anime</h2>
-    <p-carousel [value]="movies" [numVisible]="7" [numScroll]="1" [circular]="true" [autoplayInterval]="3000"
-        [responsiveOptions]="responsiveOptions" styleClass="custom-carousel">
-      <ng-template let-movie pTemplate="item">
-    <div class="p-2 text-white bg-black shadow hover:scale-105 transition w-[180px] ">
-        <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
-            <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" 
-                [alt]="movie.name"
-                loading="lazy"
-                class="w-full h-60 object-cover rounded" />
-            <div class="p-2">
-                <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
-                <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
-                <div class="space-x-2 mt-1">
-                    <p class="inline-block bg-gray-300 text-gray-600 text-xs px-2 py-1 rounded">
-                        {{ movie.category[0]?.name }}
-                    </p>
-                    <p class="inline-block bg-gray-300 text-gray-600 text-xs px-2 py-1 rounded">
-                        {{ movie.year }}
-                    </p>
-                </div>
-            </div>
-        </a>
+<div class="p-4 bg-black text-white relative w-full">
+  <!-- Tiêu đề -->
+  <div class="flex items-center justify-center mb-4">
+    <img src="assets/icon/new_icon.gif" alt="Anime Icon" class="w-10 h-10 mr-2" />
+    <h2 class="text-xl font-bold">Phim Mới</h2>
+  </div>
+
+  <!-- Nút điều hướng -->
+  <button
+    (click)="scrollLeft()"
+    class=" absolute left-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80"
+  >
+    <span class="text-2xl">❮</span>
+  </button>
+  <button
+    (click)="scrollRight()"
+    class=" absolute right-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80"
+  >
+    <span class="text-2xl">❯</span>
+  </button>
+
+  <!-- Carousel -->
+  <div
+    #carousel
+    class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1"
+  >
+    <div
+      *ngFor="let movie of movies "
+      class="flex-shrink-0 bg-zinc-900 rounded shadow snap-start 
+             w-[150px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]"
+    >
+      <a [routerLink]="['/phim', movie.slug]" class="block">
+        <img
+          [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url"
+          [alt]="movie.name"
+          class="w-full h-40 md:h-48 object-cover rounded"
+        />
+        <div class="p-2">
+          <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
+          <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
+        </div>
+      </a>
     </div>
-</ng-template>
-
-    </p-carousel>
-
+  </div>
 </div>
