add skeleton loading movie detail

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -21,6 +21,7 @@
   <!-- Bên phải: nằm dưới ở mobile, hẹp hơn ở desktop -->
  <div class="md:col-span-2">
   <div class="h-full max-h-[80vh] overflow-y-auto">
+    <app-movie-randome></app-movie-randome>
     <app-movie-list-new></app-movie-list-new>
   </div>
 </div>
