--- a/src/app/pages/movie-detail/movie-detail.component.html
+++ b/src/app/pages/movie-detail/movie-detail.component.html
@@ -1,3 +1,21 @@
+
+<!-- 🔄 Skeleton Loading -->
+<div *ngIf="isLoading" class="animate-pulse space-y-6">
+  <div class="w-full h-64 sm:h-80 md:h-96 bg-zinc-800 rounded-xl"></div>
+
+  <div class="space-y-3">
+    <div class="h-8 bg-zinc-800 rounded w-3/4"></div>
+    <div class="h-4 bg-zinc-700 rounded w-1/2"></div>
+    <div class="h-4 bg-zinc-700 rounded w-full"></div>
+    <div class="h-4 bg-zinc-700 rounded w-5/6"></div>
+    <div class="h-4 bg-zinc-700 rounded w-2/3"></div>
+  </div>
+
+  <div class="grid grid-cols-5 gap-4 mt-6">
+    <div *ngFor="let i of [1,2,3,4,5]" class="h-48 bg-zinc-800 rounded-lg"></div>
+  </div>
+</div>
+<div *ngIf="!isLoading">
 <div class="bg-black text-white min-h-screen py-8">
   <div class="max-w-screen-lg mx-auto px-4 space-y-10">
 
@@ -129,4 +147,5 @@
 </div>
 
   </div>
+</div>
 </div>
