--- a/src/app/pages/movie-genre/movie-genre.component.html
+++ b/src/app/pages/movie-genre/movie-genre.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black min-h-[70vh]">
+<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black min-h-[70vh] rounded">
   <!-- Skeleton loading -->
   <ng-container *ngIf="isLoading; else movieList">
     <div *ngFor="let i of [].constructor(12)" class="animate-pulse bg-gray-800 rounded p-3">
@@ -26,7 +26,8 @@
   </ng-container>
 
   <ng-template #movieList>
-    <div *ngFor="let movie of paginatedMovies" class="text-white bg-zinc-900 shadow rounded overflow-hidden hover:scale-105 transform transition">
+    <div *ngFor="let movie of paginatedMovies"
+      class="text-white bg-zinc-900 shadow rounded overflow-hidden hover:scale-105 transform transition">
       <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
         <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
           class="w-full h-40 object-cover" />
@@ -45,38 +46,28 @@
       </a>
     </div>
   </ng-template>
-<!-- Pagination nằm trong grid, căn giữa -->
-<div *ngIf="!isLoading && totalPages > 1" class="col-span-full flex justify-center mt-6">
-  <div class="flex items-center gap-2 text-white">
-    <button
-      (click)="changePage(currentPage - 1)"
-      [disabled]="currentPage === 1"
-      class="px-3 py-1 bg-gray-700 rounded disabled:opacity-50"
-    >
-      Trước
-    </button>
+  <!-- Pagination nằm trong grid, căn giữa -->
+  <div *ngIf="!isLoading && totalPages > 1" class="col-span-full flex justify-center mt-6">
+    <div class="flex items-center gap-2 text-white">
+      <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"
+        class="px-3 py-1 bg-gray-700 rounded disabled:opacity-50">
+        Trước
+      </button>
 
-    <ng-container *ngFor="let page of pagesToShow">
-      <button
-        (click)="changePage(page)"
-        class="px-3 py-1 rounded"
-        [ngClass]="{
+      <ng-container *ngFor="let page of pagesToShow">
+        <button (click)="changePage(page)" class="px-3 py-1 rounded" [ngClass]="{
           'bg-red-600 text-white': currentPage === page,
           'bg-gray-700 text-white': currentPage !== page
-        }"
-      >
-        {{ page }}
-      </button>
-    </ng-container>
+        }">
+          {{ page }}
+        </button>
+      </ng-container>
 
-    <button
-      (click)="changePage(currentPage + 1)"
-      [disabled]="currentPage === totalPages"
-      class="px-3 py-1 bg-gray-700 rounded disabled:opacity-50"
-    >
-      Sau
-    </button>
+      <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages"
+        class="px-3 py-1 bg-gray-700 rounded disabled:opacity-50">
+        Sau
+      </button>
+    </div>
   </div>
-</div>
 
 </div>
