--- a/src/app/pages/movie-list-animation-home/movie-list-animation-home.component.html
+++ b/src/app/pages/movie-list-animation-home/movie-list-animation-home.component.html
@@ -1,40 +1,27 @@
-<div class="p-4 bg-black text-white relative w-full">
+<div class="p-4 bg-black text-white relative w-full rounded">
   <!-- Tiêu đề -->
-  <div class="flex items-center justify-center mb-4">
-    <img src="assets/icon/new_icon.gif" alt="Anime Icon" class="w-10 h-10 mr-2" />
-    <h2 class="text-xl font-bold">Phim Mới</h2>
+  <div class="flex items-center justify-start mb-4 ">
+    <img src="assets/icon/anime_icon.gif" alt="Anime Icon" class="w-10 h-10 mr-2" />
+    <h2 class="text-xl font-bold">Anime</h2>
   </div>
 
   <!-- Nút điều hướng -->
-  <button
-    (click)="scrollLeft()"
-    class=" absolute left-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80"
-  >
+  <button (click)="scrollLeft()"
+    class=" absolute left-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80">
     <span class="text-2xl">❮</span>
   </button>
-  <button
-    (click)="scrollRight()"
-    class=" absolute right-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80"
-  >
+  <button (click)="scrollRight()"
+    class=" absolute right-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80">
     <span class="text-2xl">❯</span>
   </button>
 
   <!-- Carousel -->
-  <div
-    #carousel
-    class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1"
-  >
-    <div
-      *ngFor="let movie of movies "
-      class="flex-shrink-0 bg-zinc-900 rounded shadow snap-start 
-             w-[150px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]"
-    >
+  <div #carousel class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1">
+    <div *ngFor="let movie of movies " class="flex-shrink-0 bg-zinc-900 rounded shadow snap-start 
+             w-[150px] sm:w-[180px] md:w-[200px] lg:w-[220px] xl:w-[240px]">
       <a [routerLink]="['/phim', movie.slug]" class="block">
-        <img
-          [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url"
-          [alt]="movie.name"
-          class="w-full h-40 md:h-48 object-cover rounded"
-        />
+        <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
+          class="w-full h-40 md:h-48 object-cover rounded" />
         <div class="p-2">
           <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
           <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
