--- a/src/app/pages/movie-list-animation/movie-list-animation.component.html
+++ b/src/app/pages/movie-list-animation/movie-list-animation.component.html
@@ -1,4 +1,4 @@
-<div class="p-4 bg-black text-white h-auto">
+<div class="p-4 bg-black text-white h-auto rounded">
     <!-- Tiêu đề -->
     <h2 class="text-xl font-bold mb-4">
         <img src="assets/icon/tv_show.gif" alt="Anime Icon" class="inline-block w-10 h-10  mr-2">
@@ -7,41 +7,43 @@
     </h2>
     <!-- Container cuộn -->
     <div class="scrollbar-hide overflow-y-auto max-h-[700px] pr-1">
-       
-<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black min-h-[70vh]">
-  <!-- Skeleton loading -->
-  <ng-container *ngIf="isLoading; else movieList">
-    <div *ngFor="let i of [].constructor(12)" class="animate-pulse bg-gray-800 rounded p-3">
-      <div class="h-40 bg-gray-700 rounded mb-2"></div>
-      <div class="h-3 bg-gray-700 rounded w-3/4 mb-1"></div>
-      <div class="h-3 bg-gray-700 rounded w-1/2 mb-2"></div>
-      <div class="flex gap-2">
-        <div class="h-4 w-10 bg-gray-700 rounded"></div>
-        <div class="h-4 w-10 bg-gray-700 rounded"></div>
-      </div>
-    </div>
-  </ng-container>
 
-  <ng-template #movieList>
-    <div *ngFor="let movie of paginatedMovies" class="text-white bg-zinc-900 shadow rounded overflow-hidden hover:scale-105 transform transition">
-      <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
-        <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
-          class="w-full h-40 object-cover" />
-        <div class="p-2">
-          <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
-          <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
-        </div>
-        <div class="space-x-2 px-2 py-2">
-          <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
-            {{ movie.category[0]?.name }}
-          </span>
-          <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
-            {{ movie.year }}
-          </span>
-        </div>
-      </a>
-    </div>
-  </ng-template>
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4  bg-black min-h-[70vh] rounded">
+            <!-- Skeleton loading -->
+            <ng-container *ngIf="isLoading; else movieList">
+                <div *ngFor="let i of [].constructor(12)" class="animate-pulse bg-gray-800 rounded p-3">
+                    <div class="h-40 bg-gray-700 rounded mb-2"></div>
+                    <div class="h-3 bg-gray-700 rounded w-3/4 mb-1"></div>
+                    <div class="h-3 bg-gray-700 rounded w-1/2 mb-2"></div>
+                    <div class="flex gap-2">
+                        <div class="h-4 w-10 bg-gray-700 rounded"></div>
+                        <div class="h-4 w-10 bg-gray-700 rounded"></div>
+                    </div>
+                </div>
+            </ng-container>
+
+            <ng-template #movieList>
+                <div *ngFor="let movie of paginatedMovies"
+                    class="text-white bg-zinc-900 shadow rounded overflow-hidden hover:scale-105 transform transition">
+                    <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
+                        <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
+                            class="w-full h-40 object-cover rounded-t" />
+                        <div class="p-2">
+                            <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
+                            <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
+                        </div>
+                        <div class="space-x-2 px-2 py-2">
+                            <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
+                                {{ movie.category[0]?.name }}
+                            </span>
+                            <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
+                                {{ movie.year }}
+                            </span>
+                        </div>
+                    </a>
+                </div>
+
+            </ng-template>
         </div>
 
     </div>
