--- a/src/app/pages/movie-list-new/movie-list-new.component.html
+++ b/src/app/pages/movie-list-new/movie-list-new.component.html
@@ -1,8 +1,8 @@
-<div class="p-4 bg-black text-white h-full">
+<div class="p-4 bg-black text-white h-full rounded">
   <!-- Tiêu đề -->
 <div class="flex items-center justify-center mb-4">
   <img src="assets/icon/new_icon.gif" alt="Anime Icon" class="w-10 h-10 mr-2">
-  <h2 class="text-xl font-bold">Phim Mới</h2>
+  <h2 class=" font-bold">Phim Mới</h2>
 </div>
 
   <!-- Container cuộn -->
