--- a/src/app/pages/movie-randome/movie-randome.component.html
+++ b/src/app/pages/movie-randome/movie-randome.component.html
@@ -1,6 +1,6 @@
 <button
   (click)="goToRandomMovie()"
-  class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded w-full text-center"
+  class="bg-yellow-600 hover:bg-yellow-700 text-white px-4 py-2 rounded w-full text-center cursor-pointer"
 >
   🎲 Xem phim ngẫu nhiên
 </button>
