--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,63 +29,77 @@
         <span class="text-[#E50914]">Mov</span><span class="text-white">ioPhim</span>
       </h1>
 
-    <!-- Main Nav -->
-<nav class="flex flex-col space-y-6 text-[#b3b3b3]">
-  <!-- Home -->
-  <a [routerLink]="'/trang-chu'" (click)="setActive('/trang-chu')"
-    class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300"
-    [ngClass]="{
+      <!-- Main Nav -->
+      <nav class="flex flex-col space-y-6 text-[#b3b3b3]">
+        <!-- Home -->
+        <a [routerLink]="'/trang-chu'" (click)="setActive('/trang-chu')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
       'text-[#E50914] bg-[#2e2e2e]': activeLink === '/trang-chu',
       'text-[#b3b3b3] hover:text-white': activeLink !== '/trang-chu'
     }">
-<i class="fa-solid fa-house text-lg w-5 "></i> <!-- đúng với v6 -->
-    <span class="md:hidden lg:inline">Home</span>
-  </a>
+          <i class="fa-solid fa-house text-lg w-5 "></i> <!-- đúng với v6 -->
+          <span class="md:hidden lg:inline">Home</span>
+        </a>
 
-  <!-- Movie -->
-  <a [routerLink]="'/the-loai'" (click)="setActive('/the-loai')"
-    class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300"
-    [ngClass]="{
-      'text-[#E50914] bg-[#2e2e2e]': activeLink === '/the-loai',
-      'text-[#b3b3b3] hover:text-white': activeLink !== '/the-loai'
+          <!-- Phim lẻ -->
+        <a [routerLink]="'/phim-le'" (click)="setActive('/phim-le')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
+      'text-[#E50914] bg-[#2e2e2e]': activeLink === '/phim-le',
+      'text-[#b3b3b3] hover:text-white': activeLink !== '/phim-le'
     }">
-    <i class="fas fa-film text-lg w-5"></i>
-    <span class="md:hidden lg:inline">Movie</span>
-  </a>
+          <i class="fa-solid fa-house text-lg w-5 "></i> <!-- đúng với v6 -->
+          <span class="md:hidden lg:inline">Phim lẻ</span>
+        </a>
+          <!-- Phim bộ -->
+        <a [routerLink]="'/phim-bo'" (click)="setActive('/phim-bo')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
+      'text-[#E50914] bg-[#2e2e2e]': activeLink === '/phim-bo',
+      'text-[#b3b3b3] hover:text-white': activeLink !== '/phim-bo'
+    }">
+          <i class="fa-solid fa-house text-lg w-5 "></i> <!-- đúng với v6 -->
+          <span class="md:hidden lg:inline">Phim bộ</span>
+        </a>
 
-  <!-- ANIME -->
-  <a href="/anime" (click)="setActive('/animation')"
-    class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300"
-    [ngClass]="{
+     
+
+        <!-- ANIME -->
+        <a href="/anime" (click)="setActive('/animation')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
       'text-[#E50914] bg-[#2e2e2e]': activeLink === 'animation',
       'text-[#b3b3b3] hover:text-white': activeLink !== 'animation'
     }">
-    <i class="far fa-bell text-lg w-5"></i>
-    <span class="md:hidden lg:inline">Anime</span>
-  </a>
-  <!-- TV-shows -->
-  <a [routerLink]="'/tv-shows'" (click)="setActive('/tv-shows')"
-    class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300"
-    [ngClass]="{
+          <i class="far fa-bell text-lg w-5"></i>
+          <span class="md:hidden lg:inline">Anime</span>
+        </a>
+        <!-- TV-shows -->
+        <a [routerLink]="'/tv-shows'" (click)="setActive('/tv-shows')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
       'text-[#E50914] bg-[#2e2e2e]': activeLink === '/tv-shows',
       'text-[#b3b3b3] hover:text-white': activeLink !== '/tv-shows'
     }">
-    <i class="fas fa-tv text-lg w-5"></i>
-    <span class="md:hidden lg:inline">TV Show</span>
-  </a>
-
-  <!-- Country -->
-  <a [routerLink]="'/quoc-gia'" (click)="setActive('/quoc-gia')"
-    class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300"
-    [ngClass]="{
+          <i class="fas fa-tv text-lg w-5"></i>
+          <span class="md:hidden lg:inline">TV Show</span>
+        </a>
+   <!-- Movie -->
+        <a [routerLink]="'/the-loai'" (click)="setActive('/the-loai')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
+      'text-[#E50914] bg-[#2e2e2e]': activeLink === '/the-loai',
+      'text-[#b3b3b3] hover:text-white': activeLink !== '/the-loai'
+    }">
+          <i class="fas fa-film text-lg w-5"></i>
+          <span class="md:hidden lg:inline">Thể loại</span>
+        </a>
+        <!-- Country -->
+        <a [routerLink]="'/quoc-gia'" (click)="setActive('/quoc-gia')"
+          class="flex items-center space-x-3 px-2 py-2 rounded-md transition-all duration-300" [ngClass]="{
       'text-[#E50914] bg-[#2e2e2e]': activeLink === '/quoc-gia',
       'text-[#b3b3b3] hover:text-white': activeLink !== '/quoc-gia'
     }">
-    <i class="fas fa-globe-asia text-lg w-5"></i>
-    <span class="md:hidden lg:inline">Country</span>
-  </a>
+          <i class="fas fa-globe-asia text-lg w-5"></i>
+          <span class="md:hidden lg:inline">Country</span>
+        </a>
 
-</nav>
+      </nav>
 
     </div>
   </aside>
