--- a/src/app/pages/movie-country/movie-country.component.html
+++ b/src/app/pages/movie-country/movie-country.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black min-h-[70vh]">
+<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black ">
   <!-- Skeleton loading -->
   <ng-container *ngIf="isLoading; else movieList">
     <div *ngFor="let i of [].constructor(12)" class="animate-pulse bg-gray-800 rounded p-3">
@@ -26,7 +26,7 @@
   </ng-container>
 
   <ng-template #movieList>
-    <div *ngFor="let movie of paginatedMovies" class="text-white bg-zinc-900 shadow rounded overflow-hidden hover:scale-105 transform transition">
+    <div *ngFor="let movie of paginatedMovies" class="text-white bg-zinc-900 shadow rounded  hover:scale-105 transform transition">
       <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
         <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
           class="w-full h-40 object-cover" />
