--- a/src/app/pages/movie-genre-page/movie-genre-page.component.html
+++ b/src/app/pages/movie-genre-page/movie-genre-page.component.html
@@ -11,7 +11,8 @@
   </div>
 </div>
 
-<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black min-h-[70vh] rounded">
+<!-- Grid phim -->
+<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black rounded">
   <!-- Skeleton loading -->
   <ng-container *ngIf="isLoading; else movieList">
     <div *ngFor="let i of [].constructor(12)" class="animate-pulse bg-gray-800 rounded p-3">
@@ -25,42 +26,44 @@
     </div>
   </ng-container>
 
-   <ng-template #movieList>
-        <div *ngFor="let movie of paginatedMovies"
-          class="relative text-white bg-zinc-900 shadow rounded overflow-hidden">
-          <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
-            <!-- Badge chung -->
-               <div class="absolute top-0 left-1 z-10">
-                            <span
-                                class="bg-gradient-to-r from-purple-600 to-pink-500 hover:from-purple-700 hover:to-pink-600 text-white text-[10px] px-2 py-1 rounded shadow">
-                                {{ movie.quality }} + {{ movie.lang }}
-                            </span>
-                        </div>
+  <ng-template #movieList>
+    <div *ngFor="let movie of paginatedMovies"
+      class="relative text-white bg-zinc-900 shadow rounded overflow-hidden">
+      <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
+        <!-- Badge chung -->
+        <div class="absolute top-0 left-1 z-10">
+          <span
+            class="bg-gradient-to-r from-purple-600 to-pink-500 hover:from-purple-700 hover:to-pink-600 text-white text-[10px] px-2 py-1 rounded shadow">
+            {{ movie.quality }} + {{ movie.lang }}
+          </span>
+        </div>
 
-                        <div class="overflow-hidden relative">
-                            <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
-                                class="w-full h-40 object-cover rounded-t transform transition duration-300 hover:scale-105" />
+        <div class="overflow-hidden relative">
+          <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
+            class="w-full h-40 object-cover rounded-t transform transition duration-300 hover:scale-105" />
 
-                            <div *ngIf="movie.episode_current" class="absolute bottom-1 right-1 z-10">
-                                <span class="bg-gradient-to-r from-red-600 to-orange-500 hover:from-red-700 hover:to-orange-600
+          <div *ngIf="movie.episode_current" class="absolute bottom-1 right-1 z-10">
+            <span
+              class="bg-gradient-to-r from-red-600 to-orange-500 hover:from-red-700 hover:to-orange-600
  text-white text-[10px] px-2 py-1 rounded shadow">
-                                    {{ movie.episode_current }}
-                                </span>
-                            </div>
-                        </div>
+              {{ movie.episode_current }}
+            </span>
+          </div>
+        </div>
 
-            <!-- Category + Year -->
-            <div class="space-x-2 px-2 py-2">
-              <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
-                {{ movie.category[0]?.name }}
-              </span>
-              <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
-                {{ movie.year }}
-              </span>
-            </div>
-          </a>
-        </div>  
-      </ng-template>
+        <!-- Category + Year -->
+        <div class="space-x-2 px-2 py-2">
+          <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
+            {{ movie.category[0]?.name }}
+          </span>
+          <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
+            {{ movie.year }}
+          </span>
+        </div>
+      </a>
+    </div>
+  </ng-template>
+
   <!-- Pagination nằm trong grid, căn giữa -->
   <div *ngIf="!isLoading && totalPages > 1" class="col-span-full flex justify-center mt-6">
     <div class="flex items-center gap-2 text-white">
