--- a/src/app/components/latest-movie-list/latest-movie-list.component.html
+++ b/src/app/components/latest-movie-list/latest-movie-list.component.html
@@ -14,15 +14,26 @@
   </button> -->
     </div>
 
-    <!-- Nút điều hướng -->
-    <button (click)="scrollLeft()"
-        class="absolute left-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80">
-        <span class="text-2xl">❮</span>
-    </button>
-    <button (click)="scrollRight()"
-        class="absolute right-0 top-1/2 transform -translate-y-1/2 z-10 p-2 bg-black bg-opacity-50 hover:bg-opacity-80">
-        <span class="text-2xl">❯</span>
-    </button>
+<!-- Nút điều hướng -->
+<button
+  (click)="scrollLeft()"
+  class="absolute left-0 top-2/3 transform -translate-y-1/2 z-10 p-2
+         bg-gradient-to-r from-red-600 to-orange-500
+         hover:from-red-700 hover:to-orange-600
+         text-white rounded"
+>
+  <span class="text-2xl">❮</span>
+</button>
+<button
+  (click)="scrollRight()"
+  class="absolute right-0 top-2/3 transform -translate-y-1/2 z-10 p-2
+         bg-gradient-to-r from-red-600 to-orange-500
+         hover:from-red-700 hover:to-orange-600
+         text-white rounded"
+>
+  <span class="text-2xl">❯</span>
+</button>
+
 
     <!-- Carousel -->
     <div #carousel class="flex overflow-x-auto scrollbar-hide space-x-4 snap-x snap-mandatory scroll-smooth px-1">
